Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/TyparamStaticScope2.out
TyparamStaticScope2.java:13:40: compiler.err.non-static.cant.be.ref: kindname.type.variable, T
1 error
